api-rust-actix/manifests/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: api-rust-actix
  labels:
    istio-injection: enabled
