api-rust-actix/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-rust-actix
  labels:
    app: api-rust-actix
spec:
  selector:
    matchLabels:
      app: api-rust-actix
  replicas: 1
  template:
    metadata:
      labels:
        app: api-rust-actix
    spec:
      containers:
        - name: api-rust-actix
          image: api_rust_actix
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8000
          resources:
            requests:
              memory: "512Mi"
              cpu: "500m"
            limits:
              memory: "512Mi"
              cpu: "500m"
          readinessProbe:
            httpGet:
              path: /healthz
              port: 8000
            initialDelaySeconds: 2
            periodSeconds: 10
            timeoutSeconds: 10
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8000
            initialDelaySeconds: 2
            periodSeconds: 20
            timeoutSeconds: 10
