api-rust-actix/manifests/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: api-rust-actix
spec:
  hosts:
    - "*"
  gateways:
    - istio-system/ingressgateway
  http:
    - match:
        - uri:
            prefix: "/api-rust-actix/"
        - uri:
            prefix: "/api-rust-actix"
      rewrite:
        uri: "/"
      route:
        - destination:
            port:
              number: 80
            host: api-rust-actix
